Ejemplos_presentados/kubernetes_examples/kustomizer/resources/base/service-masterclass.yaml
apiVersion: v1
kind: Service
metadata:
  name: masterclass
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector: {}
  type: ClusterIP
